# pico-game

./: .gitignore  CMakeLists.txt  GAME_DESIGN.md  Makefile  PLAN.md  README.md  README_SPRITE_WORKFLOW.md  SPRITES.md  SPRITE_TRANSITION.md  TODO.md  assets_iso_sheets.md
.claude/: settings.local.json
assets/sprites/: manifest.json
pico/: CMakeLists.txt
src/: colors.h  config.h  game_loop.c  game_loop.h  hal.h  hal_pico.c  hal_sdl.c  hal_web.c  main.c  main_web.c  pico_config.h
src/data/: berries.h  equipment.h  moves.h  species.h
src/game/: actions.c  actions.h  battle.c  battle.h  items.c  items.h  npcs.c  npcs.h  pets.c  pets.h  player.c  player.h  recipes.c  recipes.h  save.c  save.h  skills.c  skills.h  state.c  state.h  structures.c  structures.h  td_cam.h  tick.c  tick.h  world.c  world.h
src/pico_assets/: atlas_base.c  atlas_base.h  atlas_chars.c  atlas_chars.h  atlas_iso_actors.c  atlas_iso_actors.h  atlas_iso_mansion.c  atlas_iso_mansion.h  atlas_iso_tiles.c  atlas_iso_tiles.h  pico_atlases.h
src/pico_assets/src/pico_assets/: pico_atlases.h
src/render/: atlas.h  font.c  font.h  iso_spritesheet.c  iso_spritesheet.h  render_debug.c  render_debug.h  render_internal.h  renderer.c  renderer.h  sprites.c  sprites.h
src/ui/: battle_ui.c  battle_ui.h  char_create.c  char_create.h  craft.c  craft.h  dialog.c  dialog.h  hud.c  hud.h  icons.h  menu.c  menu.h  shop.c  shop.h
tests/: hal_stub.c  hal_stub.h  test_runner.c
tools/: README.md  bake_iso_assets.py  gen_pico_atlases.py  gen_placeholder_items.py  gen_spritesheets.py  map_editor.html  sprite_template.py
web/: CMakeLists.txt  shell.html
