cmake_minimum_required(VERSION 3.13)

# -----------------------------------------------------------------------
# GrumbleQuest — Raspberry Pi Pico build
#
# Prerequisites:
#   1. Set PICO_SDK_PATH to your pico-sdk checkout, e.g.:
#        export PICO_SDK_PATH=~/pico/pico-sdk
#   2. Generate atlas C arrays (one-time, redo after running bake script):
#        python3 ../tools/gen_pico_atlases.py ..
#   3. Configure + build:
#        mkdir -p build && cd build
#        cmake .. -DCMAKE_BUILD_TYPE=Release
#        make -j$(nproc)
#   4. Flash: copy build/grumblequest.uf2 to the Pico in BOOTSEL mode.
#
# Pinout is defined in ../src/pico_config.h — edit to match your PCB.
# -----------------------------------------------------------------------

include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

project(grumblequest C CXX ASM)
set(CMAKE_C_STANDARD 11)

pico_sdk_init()

# -----------------------------------------------------------------------
# Core game sources (shared with SDL simulator build)
# -----------------------------------------------------------------------
set(GAME_CORE_SOURCES
    ../src/game/state.c
    ../src/game/world.c
    ../src/game/player.c
    ../src/game/skills.c
    ../src/game/pets.c
    ../src/game/tick.c
    ../src/game/save.c
    ../src/render/renderer.c
    ../src/render/sprites.c
    ../src/render/iso_spritesheet.c
    ../src/render/font.c
    ../src/ui/hud.c
    ../src/ui/menu.c
    ../src/ui/char_create.c
)

# -----------------------------------------------------------------------
# Atlas C arrays — generated by tools/gen_pico_atlases.py
# CMake will re-run the generator automatically when any PNG changes.
# -----------------------------------------------------------------------
set(PICO_ATLAS_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_iso_tiles.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_iso_actors.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_iso_mansion.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_chars.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_base.c
)

set(PICO_ATLAS_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/pico_atlases.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_iso_tiles.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_iso_actors.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_iso_mansion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_chars.h
    ${CMAKE_CURRENT_SOURCE_DIR}/../src/pico_assets/atlas_base.h
)

find_package(Python3 REQUIRED COMPONENTS Interpreter)

add_custom_command(
    OUTPUT  ${PICO_ATLAS_SOURCES} ${PICO_ATLAS_HEADERS}
    COMMAND ${Python3_EXECUTABLE}
            ${CMAKE_CURRENT_SOURCE_DIR}/../tools/gen_pico_atlases.py
            ${CMAKE_CURRENT_SOURCE_DIR}/..
    DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/../tools/gen_pico_atlases.py
        ${CMAKE_CURRENT_SOURCE_DIR}/../build/assets_iso_tiles.png
        ${CMAKE_CURRENT_SOURCE_DIR}/../build/assets_iso_actors.png
        ${CMAKE_CURRENT_SOURCE_DIR}/../build/assets_chars.png
    COMMENT "Generating Pico atlas C arrays from PNG files..."
)

add_custom_target(pico_atlases DEPENDS ${PICO_ATLAS_SOURCES})

# -----------------------------------------------------------------------
# Pico executable
# -----------------------------------------------------------------------
add_executable(grumblequest
    ../src/main.c
    ${GAME_CORE_SOURCES}
    ../src/hal_pico.c
    ${PICO_ATLAS_SOURCES}
)

add_dependencies(grumblequest pico_atlases)

target_include_directories(grumblequest PRIVATE
    ../src
    ../src/pico_assets
    ../third_party
)

target_link_libraries(grumblequest
    pico_stdlib
    hardware_spi
    hardware_gpio
    hardware_flash
    hardware_sync
)

# Expose over USB serial (UART disabled — GP0/GP1 reserved for game use)
pico_enable_stdio_usb(grumblequest  1)
pico_enable_stdio_uart(grumblequest 0)

# Generate .uf2, .bin, .hex, .map
pico_add_extra_outputs(grumblequest)

# -----------------------------------------------------------------------
# Build info
# -----------------------------------------------------------------------
message(STATUS "GrumbleQuest Pico build configured")
message(STATUS "  PICO_SDK_PATH = $ENV{PICO_SDK_PATH}")
message(STATUS "  Flash atlas C files will be generated on first build")
